[package]
name = "test-bytes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true
lto = "fat"
codegen-units = 1
target-cpu = "native"
panic = "abort"

[dependencies]
#futures = "0.3"
#tokio = {version="0.2", features=["full"]}
#bytes={version = "0.5.4", features = ["serde"]}
#bytestring={version = "0.1.5", features = ["serde"]}

futures = "0.3"
tokio = { version = "0.2", features = ["rt-core", "tcp", "macros", "sync", "rt-threaded"] }
#bytes = "0.5.4"
bytes={version = "0.5.4", features = ["serde"]}
bytestring={version = "0.1.5", features = ["serde"]}
thiserror = "1.0.11"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
uuid = { version = "0.8.1", features = ["v4"] }
hyper = "0.13"
lazy_static="1.4.0"
parking_lot="0.11.1"
chrono = "0.4.10"
ratelimit_meter = "5.0.0"
governor = "0.3"
net2 = "0.2.33"
dashmap = "5.2.0"
fxhash = "0.2.1"
url = "1.0"
slog = "2.2"
log = "0.4"
slog-scope = "4"
slog-stdlog = "4"
async-trait = "0.1.36"
anyhow = "1.0.40"
#nonzero_ext = { version = "0.2.0", default-features = false }
linked-hash-map = "0.5.4"
webpki = "0.21"
tokio-rustls = "0.15"

