[package]
name = "test-bytes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true
lto = "fat"
codegen-units = 1
target-cpu = "native"
panic = "abort"

[dependencies]
#futures = "0.3"
#tokio = {version="0.2", features=["full"]}
#bytes={version = "0.5.4", features = ["serde"]}
#bytestring={version = "0.1.5", features = ["serde"]}

futures = "0.3"
tokio = { version = "0.2", features = ["rt-core", "tcp", "macros", "sync", "rt-threaded"] }
bytes="0.5"
bytestring="0.1"
thiserror = "1.0.11"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
uuid = { version = "0.8.1", features = ["v4"] }
hyper = "0.13"
lazy_static="1.4.0"
parking_lot="0.11.1"
chrono = "0.4.10"
ratelimit_meter = "5.0.0"
governor = "0.3"
net2 = "0.2.33"
dashmap = "5.2.0"
fxhash = "0.2.1"
url = "1.0"
slog = "2.2"
log = "0.4"
slog-scope = "4"
slog-stdlog = "4"
async-trait = "0.1.36"
anyhow = "1.0.40"
linked-hash-map = "0.5.4"
webpki = "0.21"
tokio-rustls = "0.15"
reqwest = { version = "0.10.3", features = ["json"] }
tokio-util = { version = "0.2", features = ["full"] }
sqlx = { version = "0.2.5", default-features = false, features = [ "runtime-tokio", "macros" ] }
regex = "1"
config = "0.11.0"
bitflags = "1.2.1"
futures-core = "0.3.4"
futures-sink = "0.3.4"
futures-io = { version = "0.3.4", optional = true }
pin-project-lite = "0.1.4"
fern = { version = "0.5.9", features = ["colored"] }
rand = "0.8.3"
crossbeam = "0.8"
slog-async = "2.3.0"
slog-logfmt = "0.1"
itertools = "0.10.3"
update_rate = "2.0.1"

async-std = "1.10"
bincode = "1.3.3"

crossbeam-channel = "0.4.2"
warp = "0.2"
percent-encoding = "2.1"
base64 = "0.12.0"
prometheus = "0.13.0"

num-traits = "0.2"